# VoiceFlow_AI

./: .gitignore  DEVELOPMENT.md  LICENSE  README.md  README_ja.md  README_zh.md  ROADMAP.md  fix.py  index.html  log.txt  new.key  new.pub  package-lock.json  package.json  vite.config.ts  voiceflow.key  voiceflow.key.pub  语音随写・智能听写助手（VoiceFlow AI）.md
.agents/rules/: agents.md
.github/workflows/: release.yml
.qoder/repowiki/knowledge/zh/: _index.yaml
.qoder/repowiki/knowledge/zh/Rust_TS 混合错误处理：String 化 Result + try_catch + console.error 日志劫持/: _module.yaml  error_handling.md
.qoder/repowiki/knowledge/zh/Tauri v2 + Vite 双端构建与打包体系/: _module.yaml  build_system.md
.qoder/repowiki/zh/content/: 项目概述.md
.qoder/repowiki/zh/content/API 参考文档/: API 参考文档.md  事件系统接口.md  (+3 more)
.qoder/repowiki/zh/meta/: repowiki-metadata.json
public/: pill.html  recorder-worklet.js
scratch/: rewrite_app.cjs
scripts/: sync-version.cjs
src/: App.css  App.tsx  i18n.ts  main.tsx
src-tauri/: 2  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: active_window.rs  audio_manager.rs  lib.rs  main.rs  screenshot.rs  sensevoice.rs
src/components/: AutoUpdater.tsx  HistoryPanel.css  HistoryPanel.tsx  MainPanel.tsx  Modal.css  ModalContext.tsx  SettingsPanel.css  SettingsPanel.tsx  SetupWizard.css  SetupWizard.tsx
src/hooks/: useASR.ts  useGlobalHotkeys.ts  useHistory.ts  useLLMRefine.ts  useSettings.ts  useVoiceRecording.ts  useWindowManager.ts
src/locales/: en-US.json  zh-CN.json
src/utils/: api_asr.ts  audio.ts  llm-providers.ts  llm.ts  store.ts  whisper.ts
updater-proxy/: package.json  vercel.json
updater-proxy/api/: download.js  index.js
(+62 files in other folders)
