[package]
name = "voiceflow-ai"
version = "1.0.0"
description = "VoiceFlow AI - Intelligent Voice Typing Assistant"
authors = ["VoiceFlow"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "tauri_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
enigo = "0.1.3"
device_query = "1.1.2"
arboard = "3.4"
active-win-pos-rs = "0.11.0"
rdev = "0.5.3"
log = "0.4.33"
env_logger = "0.11.11"
reqwest = { version = "0.13.4", features = ["blocking", "json", "stream"] }
tar = "0.4.46"
bzip2 = "0.6.1"
zip = "8.6.0"
futures-util = "0.3.32"
tauri-plugin-fs = "2"
tauri-plugin-clipboard-manager = "2"

[target.'cfg(not(any(target_os = "android", target_os = "ios")))'.dependencies]
tauri-plugin-autostart = "2"
tauri-plugin-single-instance = "2"
tauri-plugin-updater = "2"

[target.'cfg(target_os = "windows")'.dependencies]
windows = { version = "0.58", features = [
    "Win32_Media_Audio",
    "Win32_Media_Audio_Endpoints",
    "Win32_System_Com",
    "Win32_Foundation",
] }

[profile.release]
strip = true
lto = true
opt-level = "z"
codegen-units = 1
panic = "abort"
